--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,12 @@
 *.war
 *.ear
 
+#BlueJ
+**/doc
+*.pkh
+*.ctxt
+*.bluej
+.DS_Store
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
